Penambahan Bootstrap dan Line Awesome CSS

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8"/>
     <title>Spring React</title>
     <link rel="stylesheet" href="webjars/bootstrap/4.1.3/css/bootstrap.min.css"/>
-
-    <link rel="stylesheet" href="/main.css"/>
+    <link rel="stylesheet" href="css/line-awesome-font-awesome.min.css">
 </head>
 <body>
 <div id="react"></div>
-<script src="built/bundle.js"></script>
+<script src="js/react.js"></script>
 </body>
 </html>
