--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Spring React</title>
-    <link rel="stylesheet" href="webjars/bootstrap/4.1.3/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/line-awesome-font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/line-awesome.min.css">
 </head>
 <body>
 <div id="react"></div>
